Add support for multi-item pages